Fixed sidebar alignment for width 1200px

--- a/youtube-style/sidebar.css
+++ b/youtube-style/sidebar.css
@@ -52,7 +52,8 @@
   .link {
     display: flex;
     align-items: center;
-    justify-self: right ;
+    justify-content: right ;
+    flex-direction: row;
     cursor: pointer;
     padding: 8px 24px;
   }
